--- a/Starlink/css/style.css
+++ b/Starlink/css/style.css
@@ -1,11 +1,26 @@
+/*
+1. COMMON
+2. BANNER
+
+
+
+*/
+
+
+
+
+
 body{
     font-family: 'Roboto', sans-serif;
     margin:0;
     padding:0;
+    background-color: black;
+    color: white;
 }
 
 
 /* BANNER */
+
 .banner{
     height: 100vh;
     background-image: url("../img/Marketing_LandingFeatured_Redesign_Mobile.webp");
@@ -23,6 +38,7 @@ body{
 
 
 /* NAVBAR */
+
 .banner .navbar{
     display:flex;
     justify-content: space-between;
@@ -54,6 +70,7 @@ body{
     }
 }
 
+
 .banner .navbar .logo-mobile{
     width:130px;
     height: auto;
@@ -67,27 +84,18 @@ body{
     }
 }
 
+.banner .navbar .second-nav,
 .banner .navbar .first-nav{
     display:none;
 }
 
 @media screen and (min-width:1280px) {
+    .banner .navbar .second-nav,
     .banner .navbar .first-nav{
         display:block;
     }
 }
 
-.banner .navbar .second-nav li:nth-child(1),
-.banner .navbar .second-nav li:nth-child(2){
-    display:none;
-}
-
-@media screen and (min-width:1280px) {
-    .banner .navbar .second-nav li:nth-child(1),
-    .banner .navbar .second-nav li:nth-child(2){
-        display:block;
-    }
-}
 
 .banner .navbar ul{
     list-style-type: none;
@@ -106,12 +114,9 @@ body{
     font-weight: 700;
 }
 
-.banner .navbar .second-nav li:last-child a{
-    font-size: 1.6rem;
-}
-
 
 /* SIDE MENU */
+
 nav.side-menu{
     position: fixed;
     left:0;
@@ -133,6 +138,7 @@ nav.side-menu{
     -ms-transition: transform 0.5s;
     -o-transition: transform 0.5s;
     z-index: 99;
+    overflow-y: scroll;
 }
 
 @media screen and (min-width:600px) {
@@ -141,6 +147,18 @@ nav.side-menu{
         width:200px;
     }
 }
+
+
+@media screen and (min-width:1280px) {
+    nav.side-menu .menu2,
+    nav.side-menu .menu3{
+        display: none;
+    }
+}
+
+
+
+
 
 nav.side-menu ul{
     list-style-type: none;
@@ -166,6 +184,15 @@ nav.side-menu > label{
     font-size: 1.5rem;
 }
 
+.side-menu-icon{
+    position: absolute;
+    right:30px;
+    top:32px;
+    z-index: 5;
+    font-size: 1.6rem;
+    color :white;
+}
+
 .chkMenu{
     display: none;
 }
@@ -180,18 +207,19 @@ nav.side-menu > label{
 
 .banner::before{
     content: "";
-    transition: background-color 1;
-    -webkit-transition: background-color 1;
-    -moz-transition: background-color 1;
-    -ms-transition: background-color 1;
-    -o-transition: background-color 1;
+    transition:background-color 1s;
+    -webkit-transition:background-color 1s;
+    -moz-transition:background-color 1s;
+    -ms-transition:background-color 1s;
+    -o-transition:background-color 1s;
 }
+
 
 .chkMenu:checked ~ .banner::before{
     content: "";
     background-color: white;
     position: absolute;
-    top: 0; left: 0; right: 0; bottom: 0;
+    top:0; left:0; right:0; bottom:0;
     opacity: 0.3;
     z-index: 1;
 }
@@ -201,7 +229,8 @@ label[for="chkMenu"]{
 }
 
 
-/*BANNER CONTENT*/
+/* BANNER CONTENT */
+
 .banner .content{
     color: white;
     text-align: center;
@@ -209,12 +238,13 @@ label[for="chkMenu"]{
 
 .banner .content h1{
     font-size: 2.5rem;
-    margin: 0;
+    margin:0;
 }
+
 
 .banner .order-form{
     position: absolute;
-    bottom: 0;
+    bottom:0;
     left: 50%;
     transform: translateX(-50%);
     -webkit-transform: translateX(-50%);
@@ -222,9 +252,103 @@ label[for="chkMenu"]{
     -ms-transform: translateX(-50%);
     -o-transform: translateX(-50%);
     text-align: center;
+    width:90%;
+    display: flex;
+    flex-direction: column;
+    gap:20px;
 }
+
+
+@media screen and (min-width: 700px) {
+    .banner .order-form{
+        width:600px;
+    }
+}
+
 
 .banner .order-form form{
     display: flex;
     flex-direction: column;
+    gap:20px;
+}
+
+@media screen and (min-width: 960px) {
+    .banner .order-form form{
+        flex-direction: row;
+    }
+}
+
+
+.banner .order-form input{
+    background-color: rgba(255, 255, 255, 0.228);
+    padding:15px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    border:1px solid white;
+    font-size: 0.8rem;
+    flex: 5;
+}
+
+.banner .order-form button{
+    background-color: white;
+    padding: 15px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    border:1px solid white;
+    font-size: 0.8rem;
+    font-weight: 700;
+    flex:2;
+}
+
+.banner .order-form .map a{
+    text-decoration: none;
+    color: white;
+    font-size: 0.8rem;
+    font-weight: 600;
+}
+
+.banner .order-form .privacy{
+    color: gray;
+    font-size: 0.7rem;
+}
+
+.banner .order-form .privacy a{
+    color: rgb(166, 166, 166);
+}
+
+.banner .order-form .scroll i{
+    color: white;
+    font-size: 2rem;
+    margin-bottom: 10px;
+}
+
+
+/* MAIN */
+
+main > section {
+    display: flex;
+    flex-direction: column;
+}
+
+@media screen and (min-width: 1200px) {
+    main > section {
+        flex-direction: row;
+    }
+}
+
+
+main > section > div{
+    flex:1 0 50%;
+}
+
+main img{
+    object-fit: cover;
+    width:100%;
+    height: 70%;
 }
