--- a/SASS/assets/scss/style.scss
+++ b/SASS/assets/scss/style.scss
@@ -1,11 +1,9 @@
 body{
     font-family: "Poppins";
 }
-
 *{
     box-sizing: border-box;
 }
-
 .weather-card{
     background-color: rgb(0, 0, 84);
     color: white;
@@ -16,10 +14,10 @@ body{
     -moz-border-radius: 20px;
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
-
+    
     > .left-panel{
         flex: 2 1 200px;
-        background-image: url("../css/img/bg.jpg");
+        background-image: url("../img/bg.jpg");
         background-size: cover;
         background-position: center center;
         border-radius: 20px;
@@ -43,25 +41,20 @@ body{
             right:0;
             bottom:0;
         }
-
         h2, h3, h4, h5{
             margin: 0;
             text-shadow: 0 0 5px rgb(42, 42, 42);
         }
-
         > .date{
             z-index: 1;
             h2{
                 font-size: 2rem;
             }
-
             h4,h5{
                 font-size: 0.8rem;
                 font-weight: 500;
             }
         }
-
-
         > .temp{
             z-index: 1;
             h2, h3{
@@ -71,7 +64,6 @@ body{
             
         }
 }
-
     > .right-panel{
         flex:3 1 300px;
     }
