--- a/SASS/assets/css/style.css
+++ b/SASS/assets/css/style.css
@@ -6,10 +6,20 @@ body {
   box-sizing: border-box;
 }
 
+.button {
+  cursor: pointer;
+  border: none;
+  @i;
+}
+
 .weather-card {
   background-color: rgb(0, 0, 84);
   color: white;
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 0;
   flex-wrap: wrap;
   border-radius: 20px;
   -webkit-border-radius: 20px;
@@ -30,6 +40,9 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: stretch;
+  gap: 0;
+  flex-wrap: wrap;
   padding: 20px;
   position: relative;
   overflow: hidden;
@@ -45,7 +58,7 @@ body {
 }
 .weather-card > .left-panel h2, .weather-card > .left-panel h3, .weather-card > .left-panel h4, .weather-card > .left-panel h5 {
   margin: 0;
-  text-shadow: 0 0 5px rgb(42, 42, 42);
+  text-shadow: 0 0 5px rgb(0, 0, 84);
 }
 .weather-card > .left-panel > .date {
   z-index: 1;
@@ -66,4 +79,64 @@ body {
 }
 .weather-card > .right-panel {
   flex: 3 1 300px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+.weather-card > .right-panel ul.status {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+.weather-card > .right-panel ul.status li {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 0;
+  flex-wrap: wrap;
+}
+.weather-card > .right-panel ul.days {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 0;
+  flex-wrap: wrap;
+  text-align: center;
+}
+.weather-card > .right-panel ul.days li {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
+  gap: 0;
+  flex-wrap: wrap;
+  padding: 10px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+.weather-card > .right-panel ul.days li > span:nth-child(1) {
+  font-size: 2.5rem;
+}
+.weather-card > .right-panel ul.days li > span:nth-child(2) {
+  font-size: 0.8rem;
+}
+.weather-card > .right-panel ul.days li > span:nth-child(3) {
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+.weather-card > .right-panel ul.days li.active {
+  background-color: rgb(228, 220, 220);
+  color: rgb(0, 0, 84);
 }/*# sourceMappingURL=style.css.map */
